// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ExternalLink /> should render 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: underline;
}

<a
  class="c0"
  href="https://github.com/lapanti"
  rel="jotain hassua noopener noreferrer"
  target="_blank"
  title="title"
>
  children
</a>
`;

exports[`<ExternalLink /> should render minimal 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: underline;
}

<a
  class="c0"
  href="https://github.com/lapanti"
  rel=" noopener noreferrer"
  target="_blank"
>
  children
</a>
`;
